src/compiler/parser/MixedParser.java
// Generated from src/compiler/parser/Mixed.g4 by ANTLR 4.7.2

package compiler.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MixedParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LOAD=1, FILE=2, MODULE=3, MODULES=4, PROJECT=5, ENCODE=6, CHECK=7, VERIFY=8, 
		SEMANTICS=9, GRAPH=10, USAGE=11, HELP=12, VERBOSE=13, TEMP=14, TMP=15, 
		LIST=16, LS=17, CLEAR=18, HISTORY=19, HS=20, ENV=21, EXEC=22, LAST=23, 
		RM=24, EXTRACT=25, STORE=26, QUIT=27, EXIT=28, END=29, SEND=30, RECEIVE=31, 
		CHOICE=32, OR=33, IF=34, LET=35, IN=36, TRUE=37, FALSE=38, PLUS=39, MINUS=40, 
		MUL=41, DIV=42, MOD=43, NEQ=44, LT=45, LEQ=46, GT=47, GEQ=48, AND=49, 
		LBRA=50, RBRA=51, LPAR=52, RPAR=53, COMMA=54, COLON=55, SEMICOLON=56, 
		EQEQ=57, EQUAL=58, DOT=59, TO=60, LABEL=61, ID=62, INT=63, ARG=64, WHITESPACE=65, 
		COMMENT=66;
	public static final int
		RULE_module = 0, RULE_command = 1, RULE_statement = 2, RULE_projectstatement = 3, 
		RULE_encodestatement = 4, RULE_semantics = 5, RULE_graph = 6, RULE_expression = 7, 
		RULE_terminal = 8, RULE_printmodule = 9, RULE_load = 10, RULE_extract = 11, 
		RULE_typecheck = 12, RULE_store = 13, RULE_protocoldecl = 14, RULE_project = 15, 
		RULE_encode = 16, RULE_dir = 17, RULE_filename = 18, RULE_role = 19, RULE_ground = 20, 
		RULE_rvariable = 21, RULE_end = 22, RULE_globalprotocol = 23, RULE_globaltypedecl = 24, 
		RULE_globaltype = 25, RULE_guardedglobaltype = 26, RULE_globalcontinuation = 27, 
		RULE_globalsum = 28, RULE_pass = 29, RULE_grec = 30, RULE_parametrised = 31, 
		RULE_abstraction = 32, RULE_parameter = 33, RULE_parametrisedtype = 34, 
		RULE_pcontinuation = 35, RULE_pglobalsum = 36, RULE_parametrisedpass = 37, 
		RULE_application = 38, RULE_iapplication = 39, RULE_conditional = 40, 
		RULE_sumexpr = 41, RULE_mulexpr = 42, RULE_expr = 43, RULE_value = 44, 
		RULE_variable = 45, RULE_relexpr = 46, RULE_logexpr = 47, RULE_bexpr = 48, 
		RULE_sumop = 49, RULE_mulop = 50, RULE_relop = 51, RULE_logop = 52, RULE_compareop = 53, 
		RULE_localcontextdecl = 54, RULE_localcontext = 55, RULE_roledecl = 56, 
		RULE_localtype = 57, RULE_guardedlocaltype = 58, RULE_localcontinuation = 59, 
		RULE_localsum = 60, RULE_localaction = 61, RULE_send = 62, RULE_receive = 63, 
		RULE_recurse = 64;
	private static String[] makeRuleNames() {
		return new String[] {
			"module", "command", "statement", "projectstatement", "encodestatement", 
			"semantics", "graph", "expression", "terminal", "printmodule", "load", 
			"extract", "typecheck", "store", "protocoldecl", "project", "encode", 
			"dir", "filename", "role", "ground", "rvariable", "end", "globalprotocol", 
			"globaltypedecl", "globaltype", "guardedglobaltype", "globalcontinuation", 
			"globalsum", "pass", "grec", "parametrised", "abstraction", "parameter", 
			"parametrisedtype", "pcontinuation", "pglobalsum", "parametrisedpass", 
			"application", "iapplication", "conditional", "sumexpr", "mulexpr", "expr", 
			"value", "variable", "relexpr", "logexpr", "bexpr", "sumop", "mulop", 
			"relop", "logop", "compareop", "localcontextdecl", "localcontext", "roledecl", 
			"localtype", "guardedlocaltype", "localcontinuation", "localsum", "localaction", 
			"send", "receive", "recurse"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'load'", "'file'", "'module'", "'modules'", "'project'", "'translate'", 
			"'check'", "'verify'", "'fsm'", "'graph'", "'usage'", "'help'", "'verbose'", 
			"'temp'", "'tmp'", "'list'", "'ls'", "'clear'", "'history'", "'hs'", 
			"'env'", "'exec'", "'last'", "'rm'", "'extract'", "'store'", "'quit'", 
			"'exit'", "'end'", "'!'", "'?'", "'choice'", "'or'", "'if'", "'let'", 
			"'in'", "'true'", "'false'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!='", 
			"'<'", "'<='", "'>'", "'>='", "'and'", "'{'", "'}'", "'('", "')'", "','", 
			"':'", "';'", "'=='", "'='", "'.'", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LOAD", "FILE", "MODULE", "MODULES", "PROJECT", "ENCODE", "CHECK", 
			"VERIFY", "SEMANTICS", "GRAPH", "USAGE", "HELP", "VERBOSE", "TEMP", "TMP", 
			"LIST", "LS", "CLEAR", "HISTORY", "HS", "ENV", "EXEC", "LAST", "RM", 
			"EXTRACT", "STORE", "QUIT", "EXIT", "END", "SEND", "RECEIVE", "CHOICE", 
			"OR", "IF", "LET", "IN", "TRUE", "FALSE", "PLUS", "MINUS", "MUL", "DIV", 
			"MOD", "NEQ", "LT", "LEQ", "GT", "GEQ", "AND", "LBRA", "RBRA", "LPAR", 
			"RPAR", "COMMA", "COLON", "SEMICOLON", "EQEQ", "EQUAL", "DOT", "TO", 
			"LABEL", "ID", "INT", "ARG", "WHITESPACE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mixed.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MixedParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MixedParser.EOF, 0); }
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOAD) | (1L << FILE) | (1L << MODULE) | (1L << MODULES) | (1L << PROJECT) | (1L << ENCODE) | (1L << CHECK) | (1L << VERIFY) | (1L << SEMANTICS) | (1L << GRAPH) | (1L << USAGE) | (1L << HELP) | (1L << VERBOSE) | (1L << LIST) | (1L << LS) | (1L << CLEAR) | (1L << HISTORY) | (1L << HS) | (1L << EXEC) | (1L << LAST) | (1L << RM) | (1L << EXTRACT) | (1L << STORE) | (1L << QUIT) | (1L << EXIT) | (1L << LET) | (1L << ID))) != 0)) {
				{
				{
				setState(130);
				command();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(MixedParser.SEMICOLON, 0); }
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			statement();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(139);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalContext terminal() {
			return getRuleContext(TerminalContext.class,0);
		}
		public LoadContext load() {
			return getRuleContext(LoadContext.class,0);
		}
		public PrintmoduleContext printmodule() {
			return getRuleContext(PrintmoduleContext.class,0);
		}
		public ExtractContext extract() {
			return getRuleContext(ExtractContext.class,0);
		}
		public TypecheckContext typecheck() {
			return getRuleContext(TypecheckContext.class,0);
		}
		public StoreContext store() {
			return getRuleContext(StoreContext.class,0);
		}
		public ProtocoldeclContext protocoldecl() {
			return getRuleContext(ProtocoldeclContext.class,0);
		}
		public ParametrisedContext parametrised() {
			return getRuleContext(ParametrisedContext.class,0);
		}
		public ProjectstatementContext projectstatement() {
			return getRuleContext(ProjectstatementContext.class,0);
		}
		public SemanticsContext semantics() {
			return getRuleContext(SemanticsContext.class,0);
		}
		public EncodestatementContext encodestatement() {
			return getRuleContext(EncodestatementContext.class,0);
		}
		public GraphContext graph() {
			return getRuleContext(GraphContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case USAGE:
			case HELP:
			case VERBOSE:
			case CLEAR:
			case HISTORY:
			case HS:
			case EXEC:
			case LAST:
			case RM:
			case QUIT:
			case EXIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				terminal();
				}
				break;
			case LOAD:
			case FILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				load();
				}
				break;
			case MODULE:
			case MODULES:
			case LIST:
			case LS:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				printmodule();
				}
				break;
			case EXTRACT:
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				extract();
				}
				break;
			case CHECK:
			case VERIFY:
				enterOuterAlt(_localctx, 5);
				{
				setState(146);
				typecheck();
				}
				break;
			case STORE:
				enterOuterAlt(_localctx, 6);
				{
				setState(147);
				store();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 7);
				{
				setState(148);
				protocoldecl();
				}
				break;
			case LET:
				enterOuterAlt(_localctx, 8);
				{
				setState(149);
				parametrised();
				}
				break;
			case PROJECT:
				enterOuterAlt(_localctx, 9);
				{
				setState(150);
				projectstatement();
				}
				break;
			case SEMANTICS:
				enterOuterAlt(_localctx, 10);
				{
				setState(151);
				semantics();
				}
				break;
			case ENCODE:
				enterOuterAlt(_localctx, 11);
				{
				setState(152);
				encodestatement();
				}
				break;
			case GRAPH:
				enterOuterAlt(_localctx, 12);
				{
				setState(153);
				graph();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProjectstatementContext extends ParserRuleContext {
		public ProjectContext project() {
			return getRuleContext(ProjectContext.class,0);
		}
		public ProjectstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_projectstatement; }
	}

	public final ProjectstatementContext projectstatement() throws RecognitionException {
		ProjectstatementContext _localctx = new ProjectstatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_projectstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			project();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EncodestatementContext extends ParserRuleContext {
		public EncodeContext encode() {
			return getRuleContext(EncodeContext.class,0);
		}
		public EncodestatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encodestatement; }
	}

	public final EncodestatementContext encodestatement() throws RecognitionException {
		EncodestatementContext _localctx = new EncodestatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_encodestatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			encode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SemanticsContext extends ParserRuleContext {
		public TerminalNode SEMANTICS() { return getToken(MixedParser.SEMANTICS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SemanticsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_semantics; }
	}

	public final SemanticsContext semantics() throws RecognitionException {
		SemanticsContext _localctx = new SemanticsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_semantics);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(SEMANTICS);
			setState(161);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GraphContext extends ParserRuleContext {
		public TerminalNode GRAPH() { return getToken(MixedParser.GRAPH, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FilenameContext filename() {
			return getRuleContext(FilenameContext.class,0);
		}
		public DirContext dir() {
			return getRuleContext(DirContext.class,0);
		}
		public GraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graph; }
	}

	public final GraphContext graph() throws RecognitionException {
		GraphContext _localctx = new GraphContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_graph);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(GRAPH);
			setState(164);
			expression();
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(165);
				dir();
				}
				break;
			}
			setState(168);
			filename();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ProjectContext project() {
			return getRuleContext(ProjectContext.class,0);
		}
		public ProtocoldeclContext protocoldecl() {
			return getRuleContext(ProtocoldeclContext.class,0);
		}
		public EncodeContext encode() {
			return getRuleContext(EncodeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MixedParser.ID, 0); }
		public TerminalNode LPAR() { return getToken(MixedParser.LPAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(MixedParser.RPAR, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expression);
		try {
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				project();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(171);
				protocoldecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(172);
				encode();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(173);
				match(ID);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(174);
				match(LPAR);
				setState(175);
				expression();
				setState(176);
				match(RPAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalContext extends ParserRuleContext {
		public TerminalNode CLEAR() { return getToken(MixedParser.CLEAR, 0); }
		public TerminalNode QUIT() { return getToken(MixedParser.QUIT, 0); }
		public TerminalNode EXIT() { return getToken(MixedParser.EXIT, 0); }
		public TerminalNode LAST() { return getToken(MixedParser.LAST, 0); }
		public TerminalNode USAGE() { return getToken(MixedParser.USAGE, 0); }
		public TerminalNode ARG() { return getToken(MixedParser.ARG, 0); }
		public TerminalNode HELP() { return getToken(MixedParser.HELP, 0); }
		public TerminalNode HISTORY() { return getToken(MixedParser.HISTORY, 0); }
		public TerminalNode INT() { return getToken(MixedParser.INT, 0); }
		public TerminalNode HS() { return getToken(MixedParser.HS, 0); }
		public TerminalNode VERBOSE() { return getToken(MixedParser.VERBOSE, 0); }
		public TerminalNode ID() { return getToken(MixedParser.ID, 0); }
		public TerminalNode EXEC() { return getToken(MixedParser.EXEC, 0); }
		public TerminalNode RM() { return getToken(MixedParser.RM, 0); }
		public TerminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminal; }
	}

	public final TerminalContext terminal() throws RecognitionException {
		TerminalContext _localctx = new TerminalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_terminal);
		int _la;
		try {
			setState(210);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLEAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(180);
				match(CLEAR);
				}
				break;
			case QUIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				match(QUIT);
				}
				break;
			case EXIT:
				enterOuterAlt(_localctx, 3);
				{
				setState(182);
				match(EXIT);
				}
				break;
			case LAST:
				enterOuterAlt(_localctx, 4);
				{
				setState(183);
				match(LAST);
				}
				break;
			case USAGE:
				enterOuterAlt(_localctx, 5);
				{
				setState(184);
				match(USAGE);
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ARG) {
					{
					setState(185);
					match(ARG);
					}
				}

				}
				break;
			case HELP:
				enterOuterAlt(_localctx, 6);
				{
				setState(188);
				match(HELP);
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ARG) {
					{
					setState(189);
					match(ARG);
					}
				}

				}
				break;
			case HISTORY:
				enterOuterAlt(_localctx, 7);
				{
				setState(192);
				match(HISTORY);
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(193);
					match(INT);
					}
				}

				}
				break;
			case HS:
				enterOuterAlt(_localctx, 8);
				{
				setState(196);
				match(HS);
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(197);
					match(INT);
					}
				}

				}
				break;
			case VERBOSE:
				enterOuterAlt(_localctx, 9);
				{
				setState(200);
				match(VERBOSE);
				setState(202);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(201);
					match(ID);
					}
					break;
				}
				}
				break;
			case EXEC:
				enterOuterAlt(_localctx, 10);
				{
				setState(204);
				match(EXEC);
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(205);
					match(INT);
					}
				}

				}
				break;
			case RM:
				enterOuterAlt(_localctx, 11);
				{
				setState(208);
				match(RM);
				setState(209);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintmoduleContext extends ParserRuleContext {
		public TerminalNode MODULES() { return getToken(MixedParser.MODULES, 0); }
		public TerminalNode MODULE() { return getToken(MixedParser.MODULE, 0); }
		public TerminalNode ID() { return getToken(MixedParser.ID, 0); }
		public TerminalNode LIST() { return getToken(MixedParser.LIST, 0); }
		public TerminalNode LS() { return getToken(MixedParser.LS, 0); }
		public PrintmoduleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printmodule; }
	}

	public final PrintmoduleContext printmodule() throws RecognitionException {
		PrintmoduleContext _localctx = new PrintmoduleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_printmodule);
		try {
			setState(223);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MODULES:
				enterOuterAlt(_localctx, 1);
				{
				setState(212);
				match(MODULES);
				}
				break;
			case MODULE:
				enterOuterAlt(_localctx, 2);
				{
				setState(213);
				match(MODULE);
				setState(214);
				match(ID);
				}
				break;
			case LIST:
				enterOuterAlt(_localctx, 3);
				{
				setState(215);
				match(LIST);
				setState(217);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(216);
					match(ID);
					}
					break;
				}
				}
				break;
			case LS:
				enterOuterAlt(_localctx, 4);
				{
				setState(219);
				match(LS);
				setState(221);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(220);
					match(ID);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadContext extends ParserRuleContext {
		public TerminalNode LOAD() { return getToken(MixedParser.LOAD, 0); }
		public FilenameContext filename() {
			return getRuleContext(FilenameContext.class,0);
		}
		public DirContext dir() {
